--- a/Tests/Controltest/UserControl4.xaml
+++ b/Tests/Controltest/UserControl4.xaml
@@ -3,25 +3,41 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:dd="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
     xmlns:hj="clr-namespace:Hjmos.BaseControls.Controls;assembly=Hjmos.BaseControls"
     xmlns:i="clr-namespace:Hjmos.BaseControls.Interactivity;assembly=Hjmos.BaseControls"
     xmlns:local="clr-namespace:Controltest"
-    x:Name="user"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    x:Name="user"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <Grid>
+    <Grid x:Name="grid">
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <Button Content="111" Margin="421,39,134,110" Click="Button_Click"/>
+        <Button
+            Margin="421,39,134,110"
+            Click="Button_Click"
+            Content="111" />
         <hj:EditButton Margin="740,75,0,110.333" Background="Black" />
-        <TextBlock Text="111111111111111111111111111111111111111111111111111111111111" TextWrapping="Wrap"  Margin="20,22,587,159" />
-        <TextBox Text="{Binding DataString}"  Style="{StaticResource EditTextBoxBaseStyle}" IsReadOnly="{Binding Isread}" Margin="20,82,602,82" Background="Transparent" />
-        <TextBox Text="3333333"  Margin="214,82,408,82" IsReadOnly="False" Background="Transparent" />
-        <!--<DataGrid  hj:DataGridDragDropRowBehavior.Enabled="True" HeadersVisibility="None"   GridLinesVisibility="None"   IsReadOnly="False" FontSize="14"  Padding="0" hj:DataGridAttach.ColumnHeaderBackground="Transparent" Background="#800E3D52"  AutoGenerateColumns="False" ItemsSource="{Binding DataList1}" Grid.Row="1"> 
+        <TextBlock
+            Margin="20,22,587,159"
+            Text="111111111111111111111111111111111111111111111111111111111111"
+            TextWrapping="Wrap" />
+        <TextBox
+            Margin="20,82,602,82"
+            Background="Transparent"
+            IsReadOnly="{Binding Isread}"
+            Style="{StaticResource EditTextBoxBaseStyle}"
+            Text="{Binding DataString}" />
+        <TextBox
+            Margin="214,82,408,82"
+            Background="Transparent"
+            IsReadOnly="False"
+            Text="3333333" />
+        <!--<DataGrid  hj:DataGridDragDropRowBehavior.Enabled="True" HeadersVisibility="None"   GridLinesVisibility="None"   IsReadOnly="False" FontSize="14"  Padding="0" hj:DataGridAttach.ColumnHeaderBackground="Transparent" Background="#800E3D52"  AutoGenerateColumns="False" ItemsSource="{Binding DataList1}" Grid.Row="1">
             <DataGrid.RowStyle>
                 <Style TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource DataGridRowStyle}">
                     <Setter Property="BorderThickness" Value="0,0,0,1"/>
@@ -37,7 +53,9 @@
             </DataGrid.ColumnHeaderStyle>
             <DataGrid.CellStyle>
                 <Style TargetType="{x:Type DataGridCell}" BasedOn="{StaticResource DataGridCellStyle}">
-                    --><!--<Setter Property="HorizontalContentAlignment" Value="Center"/>--><!--
+        -->
+        <!--<Setter Property="HorizontalContentAlignment" Value="Center"/>-->
+        <!--
                 </Style>
             </DataGrid.CellStyle>
             <DataGrid.Columns>
@@ -63,9 +81,22 @@
             </DataGrid.Columns>
         </DataGrid>-->
 
+        <!--
+            AllowDrop="True"
+            PreviewMouseMove="DisposalPoint_PreviewMouseMove"
+            Drop="DisposalPoint_Drop"
+            QueryContinueDrag="DisposalPoint_QueryContinueDrag"
+            MouseLeftButtonDown="DisposalPoint_MouseLeftButtonDown"
+        -->
 
-
-
+        <!--
+            hj:ListBoxAttach.DropFinish="{Binding DropFinishCommand}"
+            hj:ListBoxAttach.EnabledDrop="{Binding IsDrop}"
+        -->
+        <!--
+            dd:DragDrop.IsDragSource="True"
+            dd:DragDrop.IsDropTarget="True"
+        -->
         <ListBox
             x:Name="DisposalPoint"
             Grid.Row="1"
@@ -73,10 +104,12 @@
             HorizontalContentAlignment="Stretch"
             hj:BackgroundSwitchElement.ItemSelectedBackground="#FF20ADC4"
             hj:BackgroundSwitchElement.MouseHoverBackground="#FF20ADC4"
+            hj:ListBoxAttach.DropFinish="{Binding DropFinishCommand}"
+            hj:ListBoxAttach.EnabledDrop="{Binding IsDrop}"
+            AllowDrop="True"
             Background="Transparent"
             BorderThickness="0"
-            ItemsSource="{Binding DataList1}"
-            >
+            ItemsSource="{Binding DataList1}">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="SelectionChanged">
                     <i:InvokeCommandAction Command="{Binding DataContext.DisposalPointSelectionChanged, ElementName=AlarmDisposal}" CommandParameter="{Binding ElementName=DisposalPoint, Path=SelectedItem}" />
@@ -100,19 +133,21 @@
                         <TextBox
                             HorizontalAlignment="Left"
                             VerticalAlignment="Center"
-                            Style="{StaticResource EditTextBoxBaseStyle}"
                             Background="Transparent"
-                            IsReadOnly="{Binding DataContext.Isread,ElementName=user}"
+                            IsReadOnly="{Binding DataContext.Isread, ElementName=user}"
+                            Style="{StaticResource EditTextBoxBaseStyle}"
                             Text="{Binding Name}" />
                         <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
                             <Button
-                                Width="12"
-                                Height="12"
+                                Width="24"
+                                Height="24"
                                 hj:IconElement.Geometry="{StaticResource ChangeLocation}"
+                                Background="Red"
+                                Command="{Binding DataContext.DropButton, ElementName=user}"
                                 Style="{StaticResource ButtonIcon}" />
                             <Button
-                                Width="12"
-                                Height="12"
+                                Width="24"
+                                Height="24"
                                 hj:IconElement.Geometry="{StaticResource ClearGeometry}"
                                 Style="{StaticResource ButtonIcon}" />
                         </StackPanel>
