--- a/Tests/Controltest/UserControl4.xaml
+++ b/Tests/Controltest/UserControl4.xaml
@@ -17,11 +17,44 @@
             <RowDefinition />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <Button
-            Margin="421,39,134,110"
+        <!--<hj:Carousel x:Name="Carousels"   Margin="113,15,120,20.333" RenderTransformOrigin="0.5,0.5"  >
+            
+            <hj:Carousel.ItemTemplate>
+                <DataTemplate>
+                    <Border Background="Red">
+                        <TextBlock Text="{Binding}" Foreground="Black" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </DataTemplate>
+            </hj:Carousel.ItemTemplate>
+
+
+        </hj:Carousel>-->
+
+        <hj:Carousel1 IsCenter="True" Width="200" Background="Green" NoDataContent="当前无预警信息"  AutoRun="True" ItemsSource="{Binding DataList}">
+            <hj:Carousel1.NoDataTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding}" FontSize="24" Foreground="White"/>
+                </DataTemplate>
+            </hj:Carousel1.NoDataTemplate>
+            <hj:Carousel1.ItemTemplate>
+                <DataTemplate>
+                    <Border Background="Red">
+                        <TextBlock Text="{Binding}" Foreground="Black" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </DataTemplate>
+            </hj:Carousel1.ItemTemplate>
+            <!--<Border Background="Red" HorizontalAlignment="Center" Width="200">
+                <TextBlock Text="1111"  Foreground="Black"  FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            </Border>
+            <Border Background="Green">
+                <TextBlock Text="22222" Width="200" Foreground="Black" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            </Border>-->
+        </hj:Carousel1>
+            <Button
+            Margin="0,39,555,110.333"
             Click="Button_Click"
             Content="111" />
-        <hj:EditButton Margin="740,75,0,110.333" Background="Black" />
+        <!--<hj:EditButton Margin="740,75,0,110.333" Background="Black" />
         <TextBlock
             Margin="20,22,587,159"
             Text="111111111111111111111111111111111111111111111111111111111111"
@@ -36,7 +69,7 @@
             Margin="214,82,408,82"
             Background="Transparent"
             IsReadOnly="False"
-            Text="3333333" />
+            Text="3333333" />-->
         <!--<DataGrid  hj:DataGridDragDropRowBehavior.Enabled="True" HeadersVisibility="None"   GridLinesVisibility="None"   IsReadOnly="False" FontSize="14"  Padding="0" hj:DataGridAttach.ColumnHeaderBackground="Transparent" Background="#800E3D52"  AutoGenerateColumns="False" ItemsSource="{Binding DataList1}" Grid.Row="1">
             <DataGrid.RowStyle>
                 <Style TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource DataGridRowStyle}">
@@ -155,5 +188,9 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+        <Button
+            Margin="8,120,547,29.333"
+            Click="Button_Click_1"
+            Content="111" />
     </Grid>
 </UserControl>
